examples/bad/unknown_identifier.latf
int main() {
    x = 5; // error - unknown identifier

    return 0;
}